rust/crates/stencila/src/methods/encode/html/snapshots/html_fragments@emphasis.html.snap
---
source: rust/src/methods/encode/html/mod.rs
expression: encoded
input_file: fixtures/fragments/html/emphasis.html

---
<article data-itemscope="root" itemtype="http://schema.org/Article" itemscope>
  <div data-itemprop="content">
    <p itemtype="http://schema.stenci.la/Paragraph" itemscope>Some<em itemtype="http://schema.stenci.la/Emphasis" itemscope>emphasized</em>text.</p>
  </div>
</article>
