rust/crates/stencila/src/methods/encode/html/snapshots/html_fragments@thematic-break.html.snap
---
source: rust/src/methods/encode/html/mod.rs
expression: encoded
input_file: fixtures/fragments/html/thematic-break.html

---
<article data-itemscope="root" itemtype="http://schema.org/Article" itemscope>
  <div data-itemprop="content">
    <p itemtype="http://schema.stenci.la/Paragraph" itemscope>First theme.</p>
    <hr itemtype="http://schema.stenci.la/ThematicBreak" itemscope/>
    <p itemtype="http://schema.stenci.la/Paragraph" itemscope>Second theme.</p>
    <hr itemtype="http://schema.stenci.la/ThematicBreak" itemscope/>
    <p itemtype="http://schema.stenci.la/Paragraph" itemscope>Third theme.</p>
  </div>
</article>
